@@ -7,17 +7,19 @@ import eu.dec21.wp.categories.entity.Category;
 import eu.dec21.wp.categories.entity.CategoryDirector;
 import eu.dec21.wp.categories.mapper.CategoryMapper;
 import eu.dec21.wp.categories.service.CategoryService;
+import eu.dec21.wp.exceptions.ResourceNotFoundException;
 import org.hamcrest.CoreMatchers;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.stubbing.Answer;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.ActiveProfiles;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.ResultActions;
 import org.springframework.test.web.servlet.result.MockMvcResultHandlers;
@@ -27,9 +29,8 @@ import java.util.ArrayList;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.when;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 
 @WebMvcTest(controllers = CategoryController.class)
@@ -40,7 +41,7 @@ public class CategoryControllerTest {
     @Autowired
     private MockMvc mockMvc;
 
-    @MockBean
+    @MockitoBean
     private CategoryService categoryService;
 
     @Autowired
@@ -59,10 +60,18 @@ public class CategoryControllerTest {
 
     @Test
     public void CategoryController_CreateCategory_ReturnCreated() throws Exception {
-        given(categoryService.createCategory(any())).willAnswer(invocation -> invocation.getArgument(0));
+        long newCategoryId = 1L;
+        when(categoryService.createCategory(any(CategoryDto.class))).then((Answer<CategoryDto>) invocation -> {
+            CategoryDto categoryDto = invocation.getArgument(0);
+            categoryDto.setId(newCategoryId);
+            return categoryDto;
+        });
+
+
 
         categories.add(categoryDirector.constructRandomCategoryForUser(1L));
-        CategoryDto categoryDto = CategoryMapper.mapToCategoryDto(categories.get(0));
+        CategoryDto categoryDto = CategoryMapper.mapToCategoryDto(categories.getFirst());
+        categoryDto.setId(newCategoryId);
 
         ResultActions response = mockMvc.perform(post("/api/v1/categories")
                 .contentType(MediaType.APPLICATION_JSON)
@@ -99,10 +108,25 @@ public class CategoryControllerTest {
     }
 
     @Test
+    public void CategoryController_UpdateCategory_NonExisting() throws Exception {
+        CategoryDto categoryDto = CategoryMapper.mapToCategoryDto(categoryDirector.constructRandomCategoryForUser(1L));
+        when(categoryService.updateCategory(anyLong(), any(CategoryDto.class))).
+                thenThrow(new ResourceNotFoundException("Category does not exist with the given ID"));
+
+        ResultActions response = mockMvc.perform(put("/api/v1/categories/" + 999999L)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(categoryDto)));
+
+        response.andExpect(MockMvcResultMatchers.status().isNotFound()).andDo(MockMvcResultHandlers.print());
+    }
+
+    @Test
     public void CategoryController_GetAllCategories_ReturnResponseDto() throws Exception {
         ArrayList<CategoryDto> categoryDtos = new ArrayList<>(); // = CategoryDto.builder().name("Boo").color("red").priority(10).userId(1L).deleted(false).build();
         for (int i = 0; i < 10; i++) {
-            categoryDtos.add(CategoryMapper.mapToCategoryDto(categoryDirector.constructRandomCategoryForUser(1L)));
+            CategoryDto categoryDto = CategoryMapper.mapToCategoryDto(categoryDirector.constructRandomCategoryForUser(1L));
+            categoryDto.setId((long) i);
+            categoryDtos.add(categoryDto);
         }
 
         CategoryResponse responseDto = CategoryResponse.builder().pageSize(10).last(true).pageNo(1).content(categoryDtos).build();
@@ -133,6 +157,7 @@ public class CategoryControllerTest {
     @Test
     public void CategoryController_CategoryDetail_ReturnCategoryDto() throws Exception {
         CategoryDto categoryDto = CategoryMapper.mapToCategoryDto(categoryDirector.constructRandomCategoryForUser(1L));
+        categoryDto.setId(0L);
         when(categoryService.getCategoryById(categoryDto.getId())).thenReturn(categoryDto);
 
 
@@ -150,8 +175,20 @@ public class CategoryControllerTest {
     }
 
     @Test
+    public void CategoryController_CategoryDetail_NonExisting() throws Exception {
+        when(categoryService.getCategoryById(anyLong())).
+                thenThrow(new ResourceNotFoundException("Category does not exist with the given ID"));
+
+        ResultActions response = mockMvc.perform(get("/api/v1/categories/" + 99999999L)
+                .contentType(MediaType.APPLICATION_JSON));
+
+        response.andExpect(MockMvcResultMatchers.status().isNotFound()).andDo(MockMvcResultHandlers.print());
+    }
+
+    @Test
     public void CategoryController_FindCategory_ReturnCategoryDto() throws Exception {
         CategoryDto categoryDto = CategoryMapper.mapToCategoryDto(categoryDirector.constructRandomCategoryForUser(1L));
+        categoryDto.setId(0L);
         when(categoryService.findCategoryByName(categoryDto.getName(), categoryDto.getUserId())).thenReturn(categoryDto);
 
 
@@ -169,6 +206,16 @@ public class CategoryControllerTest {
     }
 
     @Test
+    public void CategoryController_FindCategory_NonExisting() throws Exception {
+        when(categoryService.findCategoryByName(anyString(), anyLong())).
+                thenThrow(new ResourceNotFoundException("Category does not exist with the given ID"));
+
+        ResultActions response = mockMvc.perform(get("/api/v1/categories/find?name=" + "non-existing-name")
+                .contentType(MediaType.APPLICATION_JSON));
+        response.andExpect(MockMvcResultMatchers.status().isNotFound()).andDo(MockMvcResultHandlers.print());
+    }
+
+    @Test
     public void CategoryController_DeleteCategory_ReturnString() throws Exception {
         long categoryId = 1L;
         doNothing().when(categoryService).deleteCategory(any(Long.class));
@@ -178,5 +225,15 @@ public class CategoryControllerTest {
 
         response.andExpect(MockMvcResultMatchers.status().isOk())
                 .andExpect(MockMvcResultMatchers.jsonPath("$", CoreMatchers.is("Category deleted with ID: " + (int) categoryId)));
+    }
+
+    @Test
+    public void CategoryController_DeleteCategory_NonExisting() throws Exception {
+        doThrow(new ResourceNotFoundException("Category does not exist with the given ID")).
+                when(categoryService).deleteCategory(anyLong());
+
+        ResultActions response = mockMvc.perform(delete("/api/v1/categories/" + 999999999L)
+                .contentType(MediaType.APPLICATION_JSON));
+        response.andExpect(MockMvcResultMatchers.status().isNotFound()).andDo(MockMvcResultHandlers.print());
     }
 }
